Extensive matlab udates

--- a/bearmind/BEARMiND_full_pipeline.ipynb
+++ b/bearmind/BEARMiND_full_pipeline.ipynb
@@ -12,9 +12,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'/users/ctx/sotskov/.ipython/profile_default/startup/startup.py'"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import shutil\n",
     "import os\n",
